--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue2-editor",
-  "version": "2.0.24",
+  "version": "2.0.41-images",
   "description": "HTML editor using Vue.js 2.0 and Quill.js, an open source editor",
   "keywords": [
     "vue",
