--- a/package.json
+++ b/package.json
@@ -36,8 +36,11 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@fortawesome/fontawesome": "^1.1.2",
+    "@fortawesome/fontawesome-free-solid": "^5.0.4",
     "axios": "^0.16.2",
-    "quill": "1.3.4",
-    "lodash.merge": "^4.6.0"
+    "install": "^0.10.4",
+    "lodash.merge": "^4.6.0",
+    "quill": "1.3.4"
   }
 }
