chore(package.json): Add nuxt folder

--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   },
   "main": "dist/vue2-editor.js",
   "files": [
-    "dist"
+    "dist",
+    "nuxt"
   ],
   "scripts": {
     "commit": "git-cz",
