feat: :fire: uses Rollup for build
Uses Rollup.js for builds instead of Vue CLI. :thumbsup:

--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,28 @@
 .DS_Store
 node_modules
-# /dist
+public
+dist/*.gz
+dist/*.map
+coverage
+docs/.vuepress/dist
 
 # local env files
 .env.local
 .env.*.local
 
-# Log files
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# related test files
+/tests/e2e/reports
+/tests/e2e/videos
+/tests/e2e/screenshots
 
-# Editor directories and files
+# editor directories and files
 .idea
-# .vscode
+.vscode
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
-*.sw?
-
+*.sw*
 # Backups
 .BACKUP
 .STORAGE
