dev(vscode): adds Peacock settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,18 @@
 {
   "vetur.validation.template": false,
-  "workbench.colorCustomizations": {}
+  "workbench.colorCustomizations": {
+    "activityBar.background": "#2f7c47",
+    "activityBar.foreground": "#e7e7e7",
+    "activityBar.inactiveForeground": "#e7e7e799",
+    "activityBarBadge.background": "#422c74",
+    "activityBarBadge.foreground": "#e7e7e7",
+    "titleBar.activeBackground": "#215732",
+    "titleBar.inactiveBackground": "#21573299",
+    "titleBar.activeForeground": "#e7e7e7",
+    "titleBar.inactiveForeground": "#e7e7e799",
+    "statusBar.background": "#215732",
+    "statusBarItem.hoverBackground": "#2f7c47",
+    "statusBar.foreground": "#e7e7e7"
+  },
+  "peacock.color": "#215732"
 }
