--- a/package.json
+++ b/package.json
@@ -72,7 +72,8 @@
     "nuxt"
   ],
   "dependencies": {
-    "quill": "^1.3.6"
+    "quill": "^2.0.0-dev.3",
+    "quill-better-table": "^1.2.10"
   },
   "devDependencies": {
     "@commitlint/cli": "^7.6.1",
