--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "vue2-editor",
-  "version": "2.10.3",
+  "name": "vue2-editor-table",
+  "version": "2.10.4",
   "description": "HTML editor using Vue.js 2, and Quill.js, an open source editor",
   "author": {
     "name": "David Royer",
